# time.gif

./: .gitignore  GifStream.hs  LICENSE  Numbers.hs  README.md  Time.hs  time-gif.cabal
Codec/: LICENSE
Codec/Picture/: BitWriter.hs  ConvGraph.hs  Types.hs  VectorByteConversion.hs
Codec/Picture/Gif/: LZWEncoding.hs
