name:                time-gif
version:             1.0
synopsis:            GIF that always shows the current time in UTC
-- description:
homepage:            https://hookrace.net/blog/time.gif
license:             BSD3
license-file:        LICENSE
author:              Dennis Felsing
maintainer:          dennis@felsin9.de
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Source-Repository head
    Type:      git
    Location:  https://github.com/def-/time.gif

executable time-gif
  main-is:             time-gif.hs
  ghc-options:         -threaded
  -- other-modules:
  other-extensions:    OverloadedStrings
  build-depends:       base, network, bytestring, random, time, vector, primitive, containers, deepseq, transformers, binary
  -- hs-source-dirs:
  default-language:    Haskell2010
